classDiagram
    class IMessageProvider {
        <<interface>>
        +string ProviderName
        +SendAsync(SendMessageRequest, CancellationToken) Task~SendMessageResult~
    }

    class IAsyncMessageProvider {
        <<interface>>
        +GetStatusAsync(string trackingId, CancellationToken) Task~MessageStatusResult~
    }

    class IMessagingService {
        <<interface>>
        +SendAsync(string provider, SendMessageRequest, CancellationToken) Task~SendMessageResult~
        +GetAvailableProviders() IEnumerable~string~
    }

    class SwiftSendProvider {
        -SwiftSendOptions _options
        -string _studentGroup
        +ProviderName = "swiftsend"
        +SendAsync()
    }

    class SecurePostProvider {
        -SecurePostOptions _options
        -string? _cachedToken
        -DateTime _tokenExpiresAt
        -SemaphoreSlim _tokenLock
        +ProviderName = "securepost"
        +SendAsync()
        -GetTokenAsync()
        -SendSingleAsync()
    }

    class LegacyLinkProvider {
        -LegacyLinkOptions _options
        -string _basicAuth
        +ProviderName = "legacylink"
        +SendAsync()
    }

    class AsyncFlowProvider {
        -AsyncFlowOptions _options
        +ProviderName = "asyncflow"
        +SendAsync()
        +GetStatusAsync()
    }

    class MessagingService {
        -Dictionary~string,IMessageProvider~ _providers
        +SendAsync()
        +GetAvailableProviders()
    }

    IMessageProvider <|.. SwiftSendProvider
    IMessageProvider <|.. SecurePostProvider
    IMessageProvider <|.. LegacyLinkProvider
    IMessageProvider <|.. AsyncFlowProvider
    IAsyncMessageProvider <|.. AsyncFlowProvider
    IAsyncMessageProvider --|> IMessageProvider
    IMessagingService <|.. MessagingService
    MessagingService o-- IMessageProvider : "1..*"